@@ -1,19 +1,21 @@
-[PerlTidy]
-select = **/*.{pl,pm,t,psgi}
-ignore = t/00-*
-ignore = t/author-*
-ignore = t/release-*
-ignore = blib/**/*
-ignore = .build/**/*
-ignore = Dist-Zilla-PluginBundle-DROLSKY-*/**/*
-argv = --profile=$ROOT/perltidyrc
-
 [PerlCritic]
 select = **/*.{pl,pm,t,psgi}
+ignore = .build/**/*
+ignore = Dist-Zilla-PluginBundle-DROLSKY-*/**/*
+ignore = blib/**/*
 ignore = t/00-*
 ignore = t/author-*
 ignore = t/release-*
-ignore = blib/**/*
+ignore = xt/**/*
+argv = --profile $ROOT/perlcriticrc
+
+[PerlTidy]
+select = **/*.{pl,pm,t,psgi}
 ignore = .build/**/*
 ignore = Dist-Zilla-PluginBundle-DROLSKY-*/**/*
-argv = --profile $ROOT/perlcriticrc
+ignore = blib/**/*
+ignore = t/00-*
+ignore = t/author-*
+ignore = t/release-*
+ignore = xt/**/*
+argv = --profile=$ROOT/perltidyrc
