@@ -1,5 +1,11 @@
 {{$NEXT}}
 
+- Switched from [ExtraTests] to [RunExtraTests].
+
+- Made the TidyAll plugin in this bundle rewrite existing tidyall.ini files to
+  make sure we don't try to check or tidy generated xt tests.
+
+
 0.45     2016-03-20
 
 - Make sure generated Pod does not have trailing whitespace.
